# crawler

./: Cargo.toml  Dockerfile  README.md  db.sql  docker-compose.yml  docker_postgres_init.sql
src/: crawler.rs  data.rs  db.rs  error.rs  handlers.rs  main.rs  routes.rs
