[package]
name = "crawler"
version = "0.1.0"
authors = ["owen.doyle <owen.doyle@thefloow.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
openssl = { version = "0.10.32", features = ["vendored"] }
warp = "0.3"
deadpool-postgres = "0.7.0"
thiserror = "1.0"
select = "0.5.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
url = "2.1.0"